# test

./: .gitignore  CMakeLists.txt  main.cpp
src/: Arithmetic.cpp  Arithmetic.hpp  CMakeLists.txt
tests/: CMakeLists.txt  test1.cpp  test2.cpp
